test/ddc-spec/source/01-Tetra/02-Error/01-ErrorExp/15-AbsBindBadKind/Test.error.check
Error in transformed module.
  in stage SourceLoadText
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/source/01-Tetra/02-Error/01-ErrorExp/15-AbsBindBadKind/Test.ds:4:1
  Function parameter has invalid kind.
      The function parameter: Read r
                    has kind: Effect
              but it must be: Data or Witness
