test/ddc-spec/source/01-Tetra/02-Error/01-ErrorExp/15-AbsBindBadKind/Test.ds

module Test where

f {@r: Region} (x: Read r) = 4

